--- a/mean-encuestas-admin/package.json
+++ b/mean-encuestas-admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mean-encuestas-admin",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
    "scripts": {
         "ng": "ng",
@@ -13,19 +13,22 @@
     },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
-  },
+        "@angular/cli": "1.4.5",
+        "@angular/common": "^4.0.0",
+        "@angular/compiler": "^4.0.0",
+        "@angular/compiler-cli": "^4.0.0",
+        "@angular/core": "^4.0.0",
+        "@angular/forms": "^4.0.0",
+        "@angular/http": "^4.0.0",
+        "@angular/platform-browser": "^4.0.0",
+        "@angular/platform-browser-dynamic": "^4.0.0",
+        "@angular/router": "^4.0.0",
+        "core-js": "^2.4.1",
+        "express": "^4.15.2",
+        "rxjs": "^5.1.0",
+        "zone.js": "^0.8.4"
+    }
+	,
   "devDependencies": {
         "@types/jasmine": "2.6.0",
         "@types/node": "~8.0.32",
