--- a/mean-encuestas-admin/package.json
+++ b/mean-encuestas-admin/package.json
@@ -2,6 +2,9 @@
   "name": "mean-encuestas-admin",
    "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
