--- a/mean-encuestas-admin/package.json
+++ b/mean-encuestas-admin/package.json
@@ -2,6 +2,9 @@
   "name": "mean-encuestas-angular",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "8.9.4"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.4.2", 
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
