--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
+        "preinstall": "npm install -g @angular/cli",
         "ng": "ng",
         "start": "serve",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "preinstall": "npm install -g @angular/cli",
-        "postinstall": "ng build --prod --aot",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "postinstall": "ng build"
     },
     "private": true,
     "dependencies": {
